* Modified makefile to compile within OS X as well

--- a/cg-02_02a_function_plotter/Makefile
+++ b/cg-02_02a_function_plotter/Makefile
@@ -1,3 +1,4 @@
+platform=$(shell uname -s)
 PROG=funcplotter
 PROGDEBUG=funcplotterd
 OBJS=funcplotter.cppo UtilGlut.cppo zpr.co
@@ -6,8 +7,14 @@ DEBUGOBJS=funcplotter.cpp UtilGlut.cpp zpr.c
 CC=gcc
 CFLAGS=-Wall -pedantic
 LD=gcc
+
+ifeq ($(platform),Darwin)
+LFLAGS=-framework OpenGL -lstdc++ -lm -lGLUT -I/usr/local/include -I/opt/X11/include -L/usr/local/lib -I/opt/X11/lib
+LDEBUGFLAGS=-framework OpenGL -lstdc++ -lm -lGLUT -I/usr/local/include -I/opt/X11/include -L/usr/local/lib -I/opt/X11/lib
+else
 LFLAGS=-lstdc++ -lm -lGL -lGLU -lglut -I. -L.
 LDEBUGFLAGS=-lstdc++ -lm -lGL -lGLU -lglut
+endif
 DEBUGFLAGS=-DDEBUG -g
 RM=rm -f
 
