--- a/cg-02_03a_solar_system/SConstruct
+++ b/cg-02_03a_solar_system/SConstruct
@@ -4,5 +4,4 @@ main_path = os.getcwd()
 Export('main_path')
 
 # Tell SCons to create our build files in the 'build' directory
-VariantDir('build', 'src', duplicate=0)
-SConscript('build/SConscript', 'main_path')
+SConscript('src/SConscript', variant_dir='build', src='src', main_path='main_path', duplicate=0)
