* Added env variables for using SCONS with colorgcc

--- a/cg-02_03a_solar_system/src/SConscript
+++ b/cg-02_03a_solar_system/src/SConscript
@@ -37,7 +37,12 @@ else:
 env = Environment(
     CPPPATH = include_dirs,
 	CCFLAGS = flags,
-    CPPDEFINES = defines
+    CPPDEFINES = defines,
+    ENV = {
+        'PATH' : os.environ['PATH'],
+        'TERM' : os.environ['TERM'],
+        'HOME' : os.environ['HOME']
+    }
 )
 
 env.Program(
