--- a/cg-02_03a_solar_system/src/SConscript
+++ b/cg-02_03a_solar_system/src/SConscript
@@ -1,26 +1,49 @@
 import os
+import platform
+
 Import('main_path')
 
-libs = [
-	'GL',
-	'GLEW',
-	'assimp',
-    'glfw',
-    'Magick++-6.Q16HDRI'
-]
+operating_system = platform.system()
+
+if operating_system == 'Darwin':
+    libs = [
+        'GLEW',
+        'assimp',
+        'Magick++-6.Q16',
+        'glfw3'
+    ]
+else:
+    libs = [
+        'GL',
+        'GLEW',
+        'assimp',
+        'glfw',
+        'Magick++-6.Q16HDRI'
+    ]
 
 file_list = [
 	Glob('*.cpp')
 ]
 
 include_dirs = [
+    '/usr/local/include/ImageMagick-6/',
     '/usr/include/ImageMagick-6/',
+    '/usr/local/include/assimp/'
     '/usr/include/assimp/'
 ]
 
 flags = [
 	'-std=c++11',
 	'-Wall'
+]
+
+link_flags = [
+    '-framework',
+    'OpenGL',
+    '-framework',
+    'IOKit',
+    '-framework',
+    'Cocoa'
 ]
 
 defines = [
@@ -44,6 +67,14 @@ env = Environment(
         'HOME' : os.environ['HOME']
     }
 )
+
+if operating_system == 'Darwin':
+    env.Append(
+        RPATH = '/usr/local/lib'
+    )
+    env.Append(
+        LINKFLAGS = link_flags
+    )
 
 env.Program(
     os.path.join(
